<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welsh Walks</string>
    <string name="app_label">Welsh Walks</string>
    <string name="action_settings">Settings</string>
    <string name="action_legalnotices">Legal Notices</string>
    <string name="action_normalMap">Normal</string>
    <string name="action_hybridMap">Hybrid</string>
    <string name="action_satelliteMap">Satellite</string>
    <string name="action_terrainMap">Terrain</string>
    <string name="action_help">Help</string>
    <string name="chooseWalk">Choose Walk</string>
    <string name="map">Map</string>
    <string name="views">Views</string>
    <string name="friends">Friends</string>
    <string name="details">Details</string>
    <string name="title_activity_legal_notices">LegalNoticesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help_vid">HelpVidActivity</string>
    <string name="title_activity_selection">Selection</string>
    <string name="dis_to_start">Distance to Start: </string>
    <string name="dis_to_end">Distance to End: </string>
    <string name="latlng">Lat/Lng Coordinates: </string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="welcome">Welcome to the Welsh Walks app - your personal guide to experiencing the beautiful walking trails that Wales has to offer.</string>
    <string name="welcome1">To help you with your choice of walk, photos, points of interest and attractions relating to each walk have been included. Once you have completed a walk you can add your own attractions to the digital map and save your personal walking statistics.</string>
    <string name="welcome2">This app tries to cater for all abilities by offering walks of varying difficulties.</string>
    <string name="welcome3">If at any point you need help or guidance on the use of the application you can find the help page in the menu options.</string>
    <string name="app_id">1374367739467605</string>
    <string name="send_request">Send Request</string>
    <string name="help_subtitle">Instructions on the use of each feature are listed below.</string>
    <string name="help">Help!</string>
    <string name="help_wel_title">Welcome Page:</string>
    <string name="help_wel1">This page describes the purpose of the application. To see the whole content of this page you must scroll down the page.</string>
    <string name="help_wel2">Scroll page up – swipe screen downwards.</string>
    <string name="help_wel3">Scroll page down – swipe screen upwards.</string>
    <string name="help_wel4">Enter the application - click the Enter Welsh Walks button at the bottom of the Welcome Page.</string>
    <string name="help_tab_title">Tabular Layout:</string>
    <string name="help_tab1">Navigate through the application using the three tabs which are - Choose Walk, Map and Details.</string>
    <string name="help_tab2">Chose a tab – click on the required tab at the top of the page.</string>
    <string name="help_choose_title">Choose Walk:</string>
    <string name="help_choose1">This tab consists of a list of walks. Each item in the list has basic information about the walk it’s associated with, which are - the walks name, length and difficulty rating. Each item is selectable and when selected it should navigate you to the map page where it sets the view at the location of the starting point of the walk, marks the path along the walk, shows information points along the walk and shows the markers pointing at nearby attractions. Only three walks are implemented at the moment which are – Llangennech, Swansea Bay and Pen Y Fan. The others will be implemented in the next update. For now these unimplemented walks simply show the message ‘Coming Soon’ on the screen.</string>
    <string name="help_map_title">Map:</string>
    <string name="help_map1">The digital map consists of several markers, each indicating different information. The markers are explained below.</string>
    <string name="help_map2">Blue dot – This indicates your current position.</string>
    <string name="help_map3">Blue Marker – This indicates the starting position of the walk. The blue colour indicates that the walk has a difficulty rating – easy.</string>
    <string name="help_map4">Red Marker – This indicates the starting position of the walk. The red colour indicates that the walk has a difficulty rating – medium.</string>
    <string name="help_map5">Purple Marker – This indicates the starting position of the walk. The purple colour indicates that the walk has a difficulty rating – hard.</string>
    <string name="help_map6">Light Blue Marker – This indicates the position of an attraction.</string>
    <string name="help_map7">i Marker – This indicates an information point. These points are only located along the path of the walks.</string>
    <string name="help_map8">P Marker – This indicates the position of a car park near the starting point of the walk.</string>
    <string name="help_map9">Blue lines – These indicate the path of the walk. The blue colour indicates that the walk has a difficulty rating – easy.</string>
    <string name="help_map10">Red lines – These indicate the path of the walk. The red colour indicates that the walk has a difficulty rating – medium.</string>
    <string name="help_map11">Purple lines – These indicate the path of the walk. The purple colour indicates that the walk has a difficulty rating – hard.</string>
    <string name="help_map12">The instructions on the use of every other feature available on this page are listed below.</string>
    <string name="help_map13">Change view type – firstly open up the menu by pressing the menu button on your phone. Then choose one from the four possible view types by clicking the corresponding menu item. The view types are Normal, Satellite, Hybrid and Terrain. The initial view type is set to Normal.</string>
    <string name="help_map14">Zoom – at the bottom right of the screen you can zoom in by pressing the ‘+’ button and zoom out by pressing the ‘-’ button.</string>
    <string name="help_map15">View current position – there is a button at the top right of the screen which changes the location of the view to your current position. Your last known position will be centred in the middle of the viewing location.</string>
    <string name="help_map16">Show walk information – click one of the coloured markers to set the path, information point and attraction markers to be visible.</string>
    <string name="help_map17">Show information point details – simply click the i marker. This shows a picture taken from that exact point and information about that point along the walk.</string>
    <string name="help_map18">Get attraction’s name – click on the light blue marker and it shows the title of the attraction.</string>
    <string name="help_map19">Add your own attraction – press and hold down at the position you would like to add a marker until a message box appears. Here you can add a title to that marker by clicking the empty white box and typing in the text using your keypad. Finally click the ‘create’ button to add and save a light blue coloured marker to the digital map.</string>
    <string name="help_map20">Delete an attraction – firstly press any light blue marker so that it shows its title then click on the title to delete the marker. Any original marker deleted will reappear when the digital map is loaded again, however if a marker previously added by yourself is deleted it will be permanently deleted.</string>
    <string name="help_det_title">Details:</string>
    <string name="help_det1">Here you can add and/or update your personal walking information. Input the distance walked to update your current saved details.</string>
    <string name="help_det2">Update statistics – firstly click on the empty grey box and type in the number (km) you have walked and would like to add to your saved details. When entered click the ‘Update Statistics’ button to update your statistics.</string>
    <string name="help_det3">Reset Statistics – to reset your saved details so that the distance walked and the number of walks taken is equal to 0 simply click the ‘Reset Statistics’ button.  </string>
    <string name="help_map_video">This page consists of the digital map; an explanation of the possible interactions can be seen in this video directly below. To start playing the video, click on the black box once to open the play/pause menu then click the middle ‘Play’ button. When playing the video it can be paused in the same way.</string>
    <string name="help_gen_title">General functionality:</string>
    <string name="help_gen1">Navigate to previous screen – press the back button on the phone.</string>
    <string name="help_gen2">Open menu – press the menu button on the phone.</string>
    <string name="image_description">Top of Pen Y Fan</string>
    <string name="enter">Enter Welsh Walks</string>
    <string name="det_dis_walked">Distance Walked (km) </string>
    <string name="det_dis_total">Total Distance Walked (km):  </string>
    <string name="det_dis_avg">Average distance per walk:  </string>
    <string name="det_num_walked">Number of walks:  </string>
    <string name="det_update">Update Statistics</string>
    <string name="det_reset">Reset Statistics!</string>
    <string name="det_zero">0</string>
    <string name="marker_title">Create Title: </string>
    <string name="empty">No data</string>
    <string name="title_activity_fragment_tabs">FragmentTabs</string>

</resources>
