<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:padding="5dp" >
	    
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:textColor="@color/buttonColor"
			    android:textSize="40sp"
			    android:text="@string/app_label" />
			<ImageView
			    android:contentDescription="@string/image_description"
			    android:layout_width="320dp"
		        android:layout_height="280dp"
		        android:layout_gravity="center_horizontal"
		        android:src="@drawable/pen_info4" />
			<TextView
		        android:layout_width="260dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:typeface="sans"
		        android:text="@string/welcome"
		        android:textSize="18sp"
		        android:textColor="@color/textColor" />
			<TextView
		        android:layout_width="260dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:typeface="sans"
		        android:text="@string/welcome1"
		        android:textSize="18sp"
		        android:textColor="@color/textColor" />
			<TextView
		        android:layout_width="260dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:typeface="sans"
		        android:text="@string/welcome2"
		        android:textSize="18sp"
		        android:textColor="@color/textColor" />
			<TextView
		        android:layout_width="260dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:typeface="sans"
		        android:text="@string/welcome3"
		        android:textSize="18sp"
		        android:textColor="@color/textColor" />
		</LinearLayout>
</ScrollView>